
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int error; int mmgr; } ;
typedef int HPDF_STATUS ;
typedef int HPDF_Number ;
typedef int HPDF_INT32 ;
typedef TYPE_1__* HPDF_Dict ;


 int HPDF_Dict_Add (TYPE_1__*,char const*,int ) ;
 int HPDF_Error_GetCode (int ) ;
 int HPDF_Number_New (int ,int ) ;

HPDF_STATUS
HPDF_Dict_AddNumber (HPDF_Dict dict,
                      const char *key,
                      HPDF_INT32 value)
{
    HPDF_Number number = HPDF_Number_New (dict->mmgr, value);

    if (!number)
        return HPDF_Error_GetCode (dict->error);

    return HPDF_Dict_Add (dict, key, number);
}
